# adalprot

./: CMakeLists.txt  LICENSE  README.md  client.cpp  main.cpp
adal-prot/: CMakeLists.txt
adal-prot/api/: adalprot.h
adal-prot/src/: main.cpp
hsp/: CMakeLists.txt
hsp/api/: hsp.h
hsp/api/hsp/: address.h  client.h  connection.h  header.h  packet.h  reader.h  request.h  response.h  router.h  server.h
hsp/src/: address.cpp  client.cpp  connection.cpp  main.cpp  packet.cpp  reader.cpp  request.cpp  router.cpp  server.cpp
src/: main.cpp
